--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,10 @@
   		<artifactId>testng</artifactId>
   		<version>7.8.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>commons-io</groupId>
+  		<artifactId>commons-io</artifactId>
+  		<version>2.15.0</version>
+  	</dependency>
   </dependencies>
 </project>
